# GunnerC2

./: .gitignore  README.md  gunnerclient.py  main.py  pyproject.toml  requirements.txt
backend/: auth.py  listeners.py  main.py  payloads.py  schemas.py  sessions.py  websocket_files.py  websocket_sessions.py
core/: backend_starter.py  banner.py  help_menus.py  http_handler.py  module_base.py  module_loader.py  payload_generator.py  portfwd.py  print_override.py  prompt_manager.py  session_manager.py  sessions.py  shell.py  stager_server.py  tcp_listener.py  utils.py
core/command_execution/: http_command_execution.py  tcp_command_execution.py
core/command_routing/: http_command_router.py  tcp_command_router.py
core/gunnershell/: activedirectory_master.py  filesystem_master.py  gunnershell.py  gunnershell_utils.py  lateralmovement_master.py  network_master.py  system_master.py  userinterface_master.py
core/gunnershell/bofs/: base.py
core/gunnershell/commands/: base.py
core/listeners/: base.py  http.py  http_handler.py  https_listener.py  tcp.py  tcp_listener.py
core/malleable_c2/: malleable_c2.py
core/payload_generator/: payload_generator.py
core/session_handlers/: session_manager.py
core/teamserver/: auth_manager.py  operator_manager.py
core/transfers/: manager.py  state.py  xfer.py
gui/: api_client.py  dashboard.py  file_browser.py  files_ws_client.py  gunnershell_console.py  listeners_tab.py  login_dialog.py  main.py  main_window.py  operators_tab.py  payloads_tab.py  session_console.py  session_graph.py  sessions_tab.py  title_bar.py
(+29 files in other folders)
